[package]
name = "parallel-algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
rand = "0.8"

[[bin]]
name = "p1_rayon_basics"
path = "p1_rayon_basics.rs"

[[bin]]
name = "p1_image_processing"
path = "p1_image_processing.rs"

[[bin]]
name = "p1_log_parsing"
path = "p1_log_parsing.rs"

[[bin]]
name = "p1_par_bridge"
path = "p1_par_bridge.rs"

[[bin]]
name = "p2_work_partitioning"
path = "p2_work_partitioning.rs"

[[bin]]
name = "p2_recursive"
path = "p2_recursive.rs"

[[bin]]
name = "p3_reduce_fold"
path = "p3_reduce_fold.rs"

[[bin]]
name = "p4_pipeline"
path = "p4_pipeline.rs"

[[bin]]
name = "p5_simd"
path = "p5_simd.rs"
